# superplane

./: .air.toml  .configuration-fields-baseline.txt  .dockerignore  .env  .env.docker  .env.docker.example  .env.example  .env.multi-instance.example  .gitignore  .go-coverage-baseline.json  .models-tx-debt-baseline.json  .policy.yml  AGENTS.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.runner  Fix_Report.md  Gemfile  LICENSE  Makefile  NOTICE  PLANELET-DOCS.md  PLUGIN-DOCS.md  README-WINDOWS.md  README.md  VAULT_IMPLEMENTATION.md  cliff.toml  cover.out  coverage-canvases.out  dev-ui-lib.sh  docker-compose.agent2.yml  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.prometheus.yml  docker-compose.vm.yml  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.sh  (+20 more)
agent/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-entrypoint.sh  pyproject.toml
agent/.cursor/commands/: prd.md
agent/db/: structure.sql
agent/db/migrations/: 20260325205949_create-agent-chats.up.sql  20260330133114_add-agent-chat-runs.up.sql  20260403134227_add-chat-token-usage.up.sql  20260407135406_add-agent-chats-updated-at-index.up.sql  20260411141954_agent-canvas-markdown-memory.up.sql  20260412145739_backfill-agent-chat-tool-labels.up.sql  20260413132301_add-agent-chats-updated-at-index.up.sql  20260421120636_add-latest-run-status-to-agent-chats.up.sql
agent/evals/: __init__.py  basic_workflow.py  case_filter.py  case_logger.py  case_names.py  case_task.py  cases.py  evaluators.py  llm_raw_http_log.py  manual_run_two_noop_live.py  otel_case_log.py  report.py  run_tool_registry.py  runner.py
agent/evals/evaluators/: __init__.py  bracket_selectors_match_canvas_name.py  called_validate_canvas_proposal.py  canvas_edge_uses_channel.py  canvas_has_node.py  canvas_has_trigger.py  canvas_has_workflow.py  canvas_total_node_count.py  contains_datetime_expression.py  no_dollar_data_as_root.py  tool_called.py  workflow_utils.py
agent/evals/utils/: __init__.py  stub_superplane_client.py  workflow_assertions.py
agent/patterns/: await-parallel-upstream-nodes.md  ephemeral-preview-machines.md  issue-auto-resolve-agent-label.md  parallel-fan-in-merge.md
agent/scripts/: bootstrap_eval_env.py  bootstrap_eval_env_in_container.sh  run_bootstrap_eval_env.sh
agent/skills/: canvas-memory.md  data-flow.md  expressions.md  glossary.md
agent/src/: usage_pb2.py
agent/src/ai/: __init__.py  agent.py  agent_deps.py  agent_stream_context.py  chat_retention.py  config.py  deps.py  grpc.py  internal_agents_grpc.py  jsonutil.py  jwt.py  llm_cost_estimate.py  main.py  models.py  models_db.py  node_mentions.py  patterns.py  persisted_run_recorder.py  proposal_configuration_coerce.py  proposal_configuration_validate.py  proposal_validate_repair.py  repl_web.py  session_store.py  skills.py  stream_tracker.py  superplane_client.py  system_prompt.txt  (+7 more)
agent/tests/: conftest.py  test_agent.py  test_agent_http.py  test_agent_stream_request.py  test_basic_workflow_eval.py  test_called_validate_canvas_proposal_evaluator.py  test_canvas_edge_uses_channel.py  test_canvas_markdown_memory.py  test_chat_retention.py  test_config_assistant.py  test_container_smoke.py  test_contains_datetime_expression.py  test_display_label.py  test_evaluators.py  test_jsonutil.py  test_jwt.py  test_list_integration_resources.py  test_llm_cost_estimate.py  test_models.py  test_node_mentions.py  test_orm_integration.py  test_patterns.py  test_proposal_configuration_coerce.py  test_proposal_configuration_validate.py  test_repl_web.py  test_report_output.py  test_session_store.py  test_skills.py  test_stream_tracker.py  test_stub_superplane_client.py  test_superplane_client.py  test_tool_called_evaluator.py  test_tool_labels.py  test_tool_loop_guard.py  test_usage_limit_checker.py  test_usage_publisher.py  test_web_error_handling.py
(+12855 files in other folders)
