[project]
name = "pydanticai-bootstrap"
version = "0.1.0"
description = "Bootstrap repository for PydanticAI services"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.135.1",
  "python-dateutil>=2.9.0",
  "pydantic>=2.11.0",
  "pydantic-ai>=0.4.0",
  "urllib3>=2.0.0",
  "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-watch>=4.2.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai", "src/repl", "src/superplaneapi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["src/superplaneapi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
strict = true
files = ["src", "tests"]
exclude = ["src/superplaneapi"]
