[project]
name = "pydanticai-bootstrap"
version = "0.1.0"
description = "Bootstrap repository for PydanticAI services"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.135.1",
  "grpcio>=1.71.0",
  "opentelemetry-sdk>=1.39.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.39.0",
  "PyJWT>=2.10.1",
  "protobuf>=6.31.0",
  "psycopg[binary]>=3.2.9,<3.3.0",  # required as the driver for SQLAlchemy's postgresql+psycopg dialect
  "sqlalchemy>=2.0.0",
  "python-dateutil>=2.9.0",
  "pydantic>=2.11.0",
  "pydantic-ai>=1.68.0",
  "pydantic-evals>=1.68.0",
  "urllib3>=2.0.0",
  "uvicorn>=0.42.0",
  "pika>=1.3.0",
  "sentry-sdk[fastapi]>=2.0.0",
]

[dependency-groups]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.0",
  "pytest-watch>=4.2.0",
  "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai", "src/db", "src/private", "src/superplaneapi", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["src/private", "src/superplaneapi", "src/usage_pb2.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/ai/superplane_client.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests", "evals"]
exclude = ["src/private", "src/superplaneapi"]

[[tool.mypy.overrides]]
module = "usage_pb2"
ignore_errors = true